# rhymepad.org

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  rhymes.py
.github/workflows/: ci.yml
rhymepad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_associations.py  build_definitions.py
static/: index.html  manifest.webmanifest
static/js/: core.js  performance.js
tests/: test_rhymes.py
